# foodie-backend

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  RUST_GUIDELINES.md  docker-compose.yml  plan.md  rust-review.sh
.cargo/: config.toml
business/: Cargo.toml  README.md
business/src/: lib.rs
business/src/application/product/: create.rs  delete.rs  estimate_expiry.rs  get_all.rs  get_by_id.rs  identify.rs  scan_receipt.rs  update.rs
business/src/application/shopping_item/: clear_bought.rs  create.rs  delete.rs  get_all.rs  update.rs
business/src/application/suggestion/: generate.rs
business/src/domain/: errors.rs  logger.rs
business/src/domain/product/: errors.rs  model.rs  repository.rs  services.rs  urgency.rs  value_objects.rs
business/src/domain/product/use_cases/: create.rs  delete.rs  estimate_expiry.rs  get_all.rs  get_by_id.rs  identify.rs  scan_receipt.rs  update.rs
business/src/domain/shared/: value_objects.rs
business/src/domain/shopping_item/: errors.rs  model.rs  repository.rs
business/src/domain/shopping_item/use_cases/: clear_bought.rs  create.rs  delete.rs  get_all.rs  update.rs
business/src/domain/suggestion/: errors.rs  model.rs  services.rs
business/src/domain/suggestion/use_cases/: generate.rs
infrastructure/: README.md
infrastructure/logger/: Cargo.toml
infrastructure/logger/src/: tracing_logger.rs
infrastructure/openai/: Cargo.toml
infrastructure/openai/src/: client.rs  expiry_estimator.rs  lib.rs  product_identifier.rs  receipt_scanner.rs  suggestion_generator.rs
infrastructure/persistence/: Cargo.toml
infrastructure/persistence/src/: db.rs  lib.rs
infrastructure/persistence/src/migrations/: 20260214215159_create_products_table.sql  20260215200000_create_shopping_items_table.sql  20260218141811_add_user_id.sql
infrastructure/persistence/src/product/: entity.rs  repository.rs
infrastructure/persistence/src/shopping_item/: entity.rs  repository.rs
presentation/: README.md
presentation/rest-api/: Cargo.toml
presentation/rest-api/src/: main.rs
presentation/rest-api/src/api/: error.rs  mod.rs  security.rs  tags.rs
presentation/rest-api/src/api/health/: routes.rs
presentation/rest-api/src/api/product/: dto.rs  error_mapper.rs  routes.rs
presentation/rest-api/src/api/shopping_item/: dto.rs  error_mapper.rs  routes.rs
presentation/rest-api/src/api/suggestion/: dto.rs  error_mapper.rs  mod.rs  routes.rs
presentation/rest-api/src/config/: app_config.rs  cors_config.rs  database_config.rs  firebase_config.rs  mod.rs  openai_config.rs  server_config.rs
presentation/rest-api/src/setup/: dependency_injection.rs  mod.rs  server.rs
