[package]
name = "business"
version = "0.1.0"
edition = "2024"

[dependencies]
# anyhow: Error handling library for Rust
anyhow = "1.0.98"
# async-trait: Library for writing async functions in traits
async-trait = "0.1.88"
# chrono: Date and time library for Rust
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
# regex: Library for parsing and manipulating regular expressions
regex = { version = "1.11.1", features = ["unicode"] }
# sha2: SHA-2 cryptographic hash functions
sha2 = "0.10"
# base64: Base64 encoding/decoding
base64 = "0.22.1"
# serde: Framework for serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
# thiserror: Easy error handling
thiserror = "2.0.12"
# uuid: Library for generating universally unique identifiers
uuid = { version = "1.16.0", features = ["v4", "serde"] }
# num-traits: Numeric traits for generic programming
num-traits = "0.2"
# url: URL parsing and manipulation library
url = "2.5"
# tokio: Asynchronous runtime for Rust
tokio = { version = "1.28", features = ["rt", "macros"] }

[dev-dependencies]
mockall = "0.13.0"
proptest = "1.0"
tokio = { version = "1.28", features = ["full"] }
